--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Czy dzisiaj jest niedziela handlowa?</h1>
 
 <script src="script.js"></script>
-<p class="nnh">Najbliższe niedziele handlowe w 2023r.:</p>
+<p class="nnh">Wszystkie niedziele handlowe w 2023r.:</p>
 <li>25.06.2023</li>
 <li>27.08.2023</li>
 <li>17.12.2023</li>
