--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
 <h1>Czy dzisiaj jest niedziela handlowa?</h1>
 
 <script src="script.js"></script>
-<p class="nnh">Wszystkie niedziele handlowe w 2023r.:</p>
-<li>25.06.2023</li>
-<li>27.08.2023</li>
-<li>17.12.2023</li>
-<li>24.12.2023</li>
 
 <footer>
-    <h3>by <a href="https://github.com/rotkiW285" target="_blank">rotkiW285</a></h3>
-    <!-- and ChatGPT -->
+    <p class="github">by <a href="https://github.com/rotkiW285" target="_blank">rotkiW285</a></p>
 </footer>
 </body>
 </html>
