--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="style.css">
+    <meta name="theme-color" content="#272727"/>
     <title>Czy dzisiaj jest niedziela handlowa?</title>
 </head>
 
