--- a/index.html
+++ b/index.html
@@ -9,18 +9,38 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="style.css">
-    <meta name="theme-color" content="#272727"/>
+    <meta name="theme-color" content="#111616" />
     <title>Czy dzisiaj jest niedziela handlowa?</title>
+    <meta name="description" content="Proste pytanie - prosta odpowiedź">
+    <meta name="keywords" content="niedziela handlowa, czy dzisiaj jest, czy jest, czy dzisiaj, czy, niedziela, handlowa, handel, handlowe, sklepy, sklep, sklepów, sklepach, sklepach, sklepami, sklepom">
+    <meta name="author" content="rotkiW285">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="google" content="notranslate">
+    <meta property="og:title" content="Czy dzisiaj jest niedziela handlowa?">
+    <meta property="og:image" content="https://285.ovh/favicon-letter/apple-touch-icon.png">
+    <meta property="og:url" content="https://handlowe.285.ovh">
+    <meta property="og:type" content="website">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
+    <meta name="og:description" content="Proste pytanie - prosta odpowiedź">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://handlowe.285.ovh">
+    <meta property="twitter:title" content="Czy dzisiaj jest niedziela handlowa?">
+    <meta name="twitter:description" content="Proste pytanie - prosta odpowiedź">
+    <meta property="twitter:image" content="https://285.ovh/favicon-letter/apple-touch-icon.png">
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
-
 <body>
     <h1>Czy dzisiaj jest niedziela handlowa?</h1>
-
     <script src="script.js"></script>
-
+    
     <footer>
-        <p class="github">by <a href="https://github.com/rotkiW285" target="_blank">rotkiW285</a></p>
+        <p class="github">
+            <button><a href="api">PseudoAPI</a></button><br>
+            by <a href="https://285.ovh" target="_blank">rotkiW285</a>
+        </p>
     </footer>
 </body>
-
 </html>
