--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://285.ovh/favicon-letter/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://285.ovh/favicon-letter/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://285.ovh/favicon-letter/favicon-16x16.png">
+    <link rel="manifest" href="https://285.ovh/favicon-letter/site.webmanifest">
     <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#111616" />
     <title>Czy dzisiaj jest niedziela handlowa?</title>
@@ -35,10 +35,7 @@
     <script src="script.js"></script>
     
     <footer>
-        <p class="github">
-            <button><a href="api">PseudoAPI</a></button><br>
-            by <a href="https://285.ovh" target="_blank">rotkiW285</a>
-        </p>
+        <p class="github"> by <a href="https://285.ovh" target="_blank">rotkiW285</a></p>
     </footer>
 </body>
 </html>
