--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="twitter:title" content="Czy dzisiaj jest niedziela handlowa?">
     <meta name="twitter:description" content="Proste pytanie - prosta odpowiedź">
     <meta property="twitter:image" content="https://285.ovh/favicon-letter/apple-touch-icon.png">
+    <script defer src="https://wielkosc.naplet.ovh/script.js" data-website-id="5def4098-0ae0-4b4e-ba85-90e58a3a94ea"></script>
 </head>
 <body>
     <h1>Czy dzisiaj jest niedziela handlowa?</h1>
